--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -3,14 +3,14 @@
 </header>
   <div class="main" >
     <p>今まで学習してきたこと</p>
-      <img src="assets/html5.png" class ="html">
-      <img src="assets/css.png" class="css">
-      <img src="assets/ruby.png" class ="ruby">
-      <img src="assets/rails.jpeg" class ="rails">
+      <img src="assets_path/html5.png" class ="html">
+      <img src="assets_path/css.png" class="css">
+      <img src="assets_path/ruby.png" class ="ruby">
+      <img src="assets_path/rails.jpeg" class ="rails">
   </div>
   <div class="main2">
-     <img src="assets/Github" class="git">
-     <img src="assets/mysql.png" class="mysql">
+     <img src="assets_path/Github" class="git">
+     <img src="assets_path/mysql.png" class="mysql">
   </div>
   
   <div class="main3">
