--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -11,6 +11,8 @@
   <div class="main2">
      <img src="assets_path/Github" class="git">
      <img src="assets_path/mysql.png" class="mysql">
+     
+     <img src="<%= asset_path "mysql.png" %>"  class ="mysql"/>
   </div>
   
   <div class="main3">
