--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -3,15 +3,13 @@
 </header>
   <div class="main" >
     <p>今まで学習してきたこと</p>
-      <img src="assets_path/html5.png" class ="html">
-      <img src="assets_path/css.png" class="css">
-      <img src="assets_path/ruby.png" class ="ruby">
-      <img src="assets_path/rails.jpeg" class ="rails">
+      <img src="<%= asset_path "html5.png" %>"  class ="html"/>
+      <img src="<%= asset_path "css.png" %>"  class ="css"/>
+      <img src="<%= asset_path "ruby.png" %>"  class ="ruby"/>
+      <img src="<%= asset_path "rails.jpeg" %>"  class ="rails"/>
   </div>
   <div class="main2">
-     <img src="assets_path/Github" class="git">
-     <img src="assets_path/mysql.png" class="mysql">
-     
+     <img src="<%= asset_path "Github.png" %>"  class ="git"/>
      <img src="<%= asset_path "mysql.png" %>"  class ="mysql"/>
   </div>
   
